Add stream url route
