# swagger.yml
@@ -20,6 +20,28 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Rap'
+  /raps/stream/{id}:
+    get:
+      summary: Retrieves URL to stream rap audio
+      description: |
+        Retrieves a signed URL to stream rap audio from
+      parameters:
+        - in: path
+          name: id
+          description: The id of the requested rap
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: A signed URL to the rap audio
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: https://vgmdownloads.com/soundtracks/super-mario-64-soundtrack/zfvgdumr/18%20File%20Select.mp3
+        '404':
+          description: Rap not found
 components:
   schemas:
     Rap:
